src/objects/Demographics_Family__c.object
<CustomObject>
    <description>Demographic object for Family</description>
    <fields>
        <fullName>BRI_Change_Date__c</fullName>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Change_Reason__c</fullName>
        <label>Change Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change in Duties</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Illness</fullName>
                </value>
                <value>
                    <fullName>Initial Assignment</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>Left Program/Agency</fullName>
                </value>
                <value>
                    <fullName>Specialist Assigned</fullName>
                </value>
                <value>
                    <fullName>Supervisor Discreation</fullName>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Change__c</fullName>
        <label>Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_County_Code__c</fullName>
        <label>County Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Employement_Status__c</fullName>
        <label>Employement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed Full Time</fullName>
                </value>
                <value>
                    <fullName>Employed Part Time</fullName>
                </value>
                <value>
                    <fullName>Maternity Leave, Unpaid, Full Time</fullName>
                </value>
                <value>
                    <fullName>Maternity Leave, Unpaid, Part Time</fullName>
                </value>
                <value>
                    <fullName>Maternity Leave, Paid, Full Time</fullName>
                </value>
                <value>
                    <fullName>Permanent Disability</fullName>
                </value>
                <value>
                    <fullName>Unemployment not Seeking Work-Barriers</fullName>
                </value>
                <value>
                    <fullName>Unemployment not Seeking Work-Preference</fullName>
                </value>
                <value>
                    <fullName>Unemployment not Seeking Work-Teen Caregiver</fullName>
                </value>
                <value>
                    <fullName>Unemployment Seeking Work</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_FSW__c</fullName>
        <label>FSW</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Family_Level__c</fullName>
        <label>Family Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1A</fullName>
                </value>
                <value>
                    <fullName>1C</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>SS</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>X1</fullName>
                </value>
                <value>
                    <fullName>X2</fullName>
                </value>
                <value>
                    <fullName>X3</fullName>
                </value>
                <value>
                    <fullName>UE</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>NS</fullName>
                </value>
                <value>
                    <fullName>1B</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Family_Number__c</fullName>
        <label>Family Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_HouseholdFSW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HouseholdFSW</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FSW history</relationshipLabel>
        <relationshipName>HouseholdFSW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_HouseholdFamilyLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HouseholdFamilyLevel</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Family Level History</relationshipLabel>
        <relationshipName>HouseholdFamilyLevel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Household__c</fullName>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Demographics Families</relationshipLabel>
        <relationshipName>DemographicsFamilies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>BRI_Program_Within_County__c</fullName>
        <label>Program Within County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_State_Id__c</fullName>
        <label>State Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Xfer1__c</fullName>
        <label>Xfer1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Xfer2__c</fullName>
        <label>Xfer2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSW</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DemographicsFamilies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DemographicsFamily</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DFN-{0000}</displayFormat>
        <label>Demographics Family Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DemographicsFamilies</pluralLabel>
    <recordTypes>
        <fullName>FL</fullName>
        <active>true</active>
        <label>FL</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSW</fullName>
        <active>true</active>
        <label>FSW</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>